objects/copadometrics__Connector_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>copadometrics__Connector_Id__c</fullName>
        <label>Connector Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Is_Schema_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Schema Configured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Last_Known_Status__c</fullName>
        <label>Last Known Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Schema_Id__c</fullName>
        <label>Schema Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Connector Settings</label>
</CustomObject>